fixed button align

--- a/style.css
+++ b/style.css
@@ -39,3 +39,7 @@ h1 {
 .btn {
 	font-weight: bold;
 }
+
+.mc_embed_signup {
+	text-align: center;
+}
